tests/rename/should_fail/T5951.hs
module T5951 where

class A a 
class B b
class C c

instance
       A =>
       B =>
       C where
         foo = undefined
